--- a/.config/waybar-river/style.css
+++ b/.config/waybar-river/style.css
@@ -79,7 +79,7 @@ window#waybar.hidden {
 	background: #bd93f9;
 }
 
-#pulseaudio {
+#pulseaudio, #wireplumber {
 	margin-top: 6px;
 	margin-left: 8px;
 	padding-left: 10px;
