.config/waybar-river: adjust spacing

--- a/.config/waybar-river/style.css
+++ b/.config/waybar-river/style.css
@@ -26,7 +26,7 @@ window#waybar.hidden {
 
 #tags {
 	margin-top: 6px;
-	margin-left: 12px;
+	/* margin-left: 12px; */
 	font-size: 4px;
 	margin-bottom: 0px;
 	border-radius: 10px;
@@ -70,7 +70,7 @@ window#waybar.hidden {
 
 #network {
 	margin-top: 6px;
-	margin-left: 8px;
+  /* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
 	margin-bottom: 0px;
@@ -82,7 +82,7 @@ window#waybar.hidden {
 
 #pulseaudio, #wireplumber {
 	margin-top: 6px;
-	margin-left: 8px;
+	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
 	margin-bottom: 0px;
@@ -94,7 +94,7 @@ window#waybar.hidden {
 
 #battery {
 	margin-top: 6px;
-	margin-left: 8px;
+	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
 	margin-bottom: 0px;
@@ -128,7 +128,7 @@ window#waybar.hidden {
 
 #backlight {
 	margin-top: 6px;
-	margin-left: 8px;
+	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
 	margin-bottom: 0px;
@@ -139,7 +139,7 @@ window#waybar.hidden {
 }
 #clock {
 	margin-top: 6px;
-	margin-left: 8px;
+	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
 	margin-bottom: 0px;
@@ -152,7 +152,7 @@ window#waybar.hidden {
 
 #memory {
 	margin-top: 6px;
-	margin-left: 8px;
+	/* margin-left: 8px; */
 	padding-left: 10px;
 	margin-bottom: 0px;
 	padding-right: 10px;
@@ -163,7 +163,7 @@ window#waybar.hidden {
 }
 #cpu {
 	margin-top: 6px;
-	margin-left: 8px;
+	/* margin-left: 8px; */
 	padding-left: 10px;
 	margin-bottom: 0px;
 	padding-right: 10px;
@@ -175,7 +175,7 @@ window#waybar.hidden {
 
 #tray {
 	margin-top: 6px;
-	margin-left: 8px;
+	/* margin-left: 8px; */
 	padding-left: 10px;
 	margin-bottom: 0px;
 	padding-right: 10px;
@@ -188,7 +188,7 @@ window#waybar.hidden {
 #custom-launcher {
 	font-size: 24px;
 	margin-top: 6px;
-	margin-left: 8px;
+	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 5px;
 	border-radius: 10px;
@@ -200,7 +200,7 @@ window#waybar.hidden {
 #custom-power {
 	font-size: 20px;
 	margin-top: 6px;
-	margin-left: 8px;
+	/* margin-left: 8px; */
 	margin-right: 8px;
 	padding-left: 10px;
 	padding-right: 5px;
@@ -213,7 +213,7 @@ window#waybar.hidden {
 
 #custom-wallpaper {
 	margin-top: 6px;
-	margin-left: 8px;
+	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
 	margin-bottom: 0px;
@@ -225,7 +225,7 @@ window#waybar.hidden {
 
 #custom-updates {
 	margin-top: 6px;
-	margin-left: 8px;
+	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
 	margin-bottom: 0px;
@@ -237,7 +237,7 @@ window#waybar.hidden {
 
 #custom-media {
 	margin-top: 6px;
-	margin-left: 8px;
+	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
 	margin-bottom: 0px;
@@ -253,7 +253,7 @@ window#waybar.hidden {
 
 #workspaces button {
   background: #444;
-  margin: 0 5px;
+  margin: 0 2px;
   color: white;
 }
 
