--- a/.config/waybar-river/style.css
+++ b/.config/waybar-river/style.css
@@ -1,17 +1,27 @@
 * {
 	border: none;
 	border-radius: 10px;
-    font-family: "JetbrainsMono Nerd Font" ;
+  font-family: "JetbrainsMono Nerd Font" ;
 	font-size: 15px;
-	min-height: 10px;
+  min-height: 10px;
 }
 
 window#waybar {
 	background: transparent;
+  border-radius: 0px;
+}
+
+window#waybar > * {
+  margin-top: 4px;
 }
 
 .modules-left {
   margin-left: 4px;
+}
+
+.modules-center {
+  margin-left: 4px;
+  margin-right: 4px;
 }
 
 .modules-right {
@@ -26,8 +36,25 @@ window#waybar.empty  #window {
   background: transparent;
 }
 
+window#waybar.battery-good {
+  /* background: green; */
+}
+
+window#waybar.battery-critical > *,
+window#waybar.battery-warning > * {
+  margin-bottom: 4px;
+}
+
+window#waybar.battery-warning {
+  background: #ff8103;
+}
+
+window#waybar.battery-critical {
+  background: red;
+}
+
 #window {
-	margin-top: 6px;
+	/* margin-top: 6px; */
 	padding-left: 10px;
 	padding-right: 10px;
 	border-radius: 10px;
@@ -37,7 +64,7 @@ window#waybar.empty  #window {
 }
 
 #tags {
-	margin-top: 6px;
+	/* margin-top: 6px; */
 	/* margin-left: 12px; */
 	font-size: 4px;
 	margin-bottom: 0px;
@@ -81,7 +108,7 @@ window#waybar.empty  #window {
 }
 
 #network {
-	margin-top: 6px;
+	/* margin-top: 6px; */
   /* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
@@ -93,7 +120,7 @@ window#waybar.empty  #window {
 }
 
 #pulseaudio, #wireplumber {
-	margin-top: 6px;
+	/* margin-top: 6px; */
 	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
@@ -105,7 +132,7 @@ window#waybar.empty  #window {
 }
 
 #battery {
-	margin-top: 6px;
+	/* margin-top: 6px; */
 	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
@@ -139,7 +166,7 @@ window#waybar.empty  #window {
 }
 
 #backlight {
-	margin-top: 6px;
+	/* margin-top: 6px; */
 	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
@@ -150,7 +177,7 @@ window#waybar.empty  #window {
 	background: #F8BD96;
 }
 #clock {
-	margin-top: 6px;
+	/* margin-top: 6px; */
 	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
@@ -163,7 +190,7 @@ window#waybar.empty  #window {
 }
 
 #memory {
-	margin-top: 6px;
+	/* margin-top: 6px; */
 	/* margin-left: 8px; */
 	padding-left: 10px;
 	margin-bottom: 0px;
@@ -175,7 +202,7 @@ window#waybar.empty  #window {
 }
 
 #cpu {
-	margin-top: 6px;
+	/* margin-top: 6px; */
 	/* margin-left: 8px; */
 	padding-left: 10px;
 	margin-bottom: 0px;
@@ -190,7 +217,7 @@ window#waybar.empty  #window {
 }
 
 #tray {
-	margin-top: 6px;
+	/* margin-top: 6px; */
 	/* margin-left: 8px; */
 	padding-left: 10px;
 	margin-bottom: 0px;
@@ -203,7 +230,7 @@ window#waybar.empty  #window {
 
 #custom-launcher {
 	font-size: 24px;
-	margin-top: 6px;
+	/* margin-top: 6px; */
 	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 5px;
@@ -215,7 +242,7 @@ window#waybar.empty  #window {
 
 #custom-power {
 	font-size: 20px;
-	margin-top: 6px;
+	/* margin-top: 6px; */
 	/* margin-left: 8px; */
 	margin-right: 8px;
 	padding-left: 10px;
@@ -228,7 +255,7 @@ window#waybar.empty  #window {
 }
 
 #custom-wallpaper {
-	margin-top: 6px;
+	/* margin-top: 6px; */
 	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
@@ -240,7 +267,7 @@ window#waybar.empty  #window {
 }
 
 #custom-updates {
-	margin-top: 6px;
+	/* margin-top: 6px; */
 	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
@@ -252,7 +279,7 @@ window#waybar.empty  #window {
 }
 
 #custom-media {
-	margin-top: 6px;
+	/* margin-top: 6px; */
 	/* margin-left: 8px; */
 	padding-left: 10px;
 	padding-right: 10px;
@@ -264,11 +291,11 @@ window#waybar.empty  #window {
 }
 
 #workspaces {
-  margin-top: 6px;
+  /* margin-top: 6px; */
 }
 
 #bluetooth {
-	margin-top: 6px;
+	/* margin-top: 6px; */
   padding: 0 10px;
 	background: #FAE3B0;
 	background: #96CDFB;
@@ -305,4 +332,9 @@ window#waybar.empty  #window {
 #workspaces button.focused:hover {
   background: yellow;
 	background: #ffe76a;
+}
+
+#workspaces button.urgent {
+  background: #9b0000;
+  color: white;
 }
